# TSKGacha

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  sampledatabase.json  secondary.py
blueprints/: auth.py  characters.py  images.py  other.py  players.py  pull.py  trades.py
templates/: base.html  character_page.html  characters.html  dashboard.html  database_view.html  home.html  imageTesting.html  index.html  login.html  personal_user.html  player_page.html  players.html  secret.html  sign_up.html
templates/authentication/: login.html  sign_up.html
templates/characters/: character_page.html  characters.html  charactersOLD.html  proposal.html
templates/players/: player_page.html  players.html
templates/pull/: already_pulled.html  banners.html  pull.html  pulled.html
templates/trades/: trades.html
