[tool.poetry]
name = "repl_python3_TSKGotcha"
version = "0.1.0"
description = ""
authors = ["WillDarragh <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
flask = "^1.1.4"
replit = "^3.0.0"
werkzeug = "^1.0.1"
flask-login = "^0.5.0"
repl = "^1.0"
pytz = "^2021.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
